--- a/index.html
+++ b/index.html
@@ -3,28 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js"></script>
+    
     <title>Js Fundamentals Practice
     </title>
 </head>
 <body>
-    <button>Start machine</button>
-    <p>The machine is stopped.</p>
-</body>
-<script>
-    const btn = document.querySelector('button');
-    const txt = document.querySelector('p');
-    
-    btn.addEventListener('click', updateBtn);
+    <!-- <label for="weather">Select the weather type today: </label>
+    <select name="" id="weather">
+      <option value="">--make a choice--</option>
+      <option value="sunny">Sunny</option>
+      <option value="rainy">Rainy</option>
+      <option value="snowing">Snowing</option>
+      <option value="overcast">overcast</option>
+    </select>
 
-    function updateBtn() {
-      if(btn.textContent === 'Start machine') {
-        btn.textContent = 'Stop machine';
-        txt.textContent = 'The machine has started!';
-      } else {
-        btn.textContent = 'Start machine';
-        txt.textContent = 'The machine is stopped.';
-      }
-    }
-  </script>
+    <p></p> -->
+
+    <label for=""theme">Select theme: </label>
+    <select name="" id="theme">
+      <option value="white">White</option>
+      <option value="black">Black</option>
+    </select>
+
+    <h1>This is my website</h1>
+    <script src="./script.js"></script>
+</body>
 </html>
